--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./vendor/icon-fonts.css">
   <title>Natuurs</title>
 </head>
 
@@ -55,6 +56,39 @@
             <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="section-featurs">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-world feature-box__icon"></i>
+            <h3 class="heading-tertiary">Explore the world</h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+            <div class="feature-box">
+                <i class="icon-basic-compass feature-box__icon"></i>
+                <h3 class="heading-tertiary">Meet nature</h3>
+                <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
+              </div>
+        </div>
+        <div class="col-1-of-4">
+            <div class="feature-box">
+                <i class="icon-basic-map feature-box__icon"></i>
+                <h3 class="heading-tertiary">Find your way</h3>
+                <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
+              </div>
+        </div>
+        <div class="col-1-of-4">
+            <div class="feature-box">
+                <i class="icon-basic-heart feature-box__icon"></i>
+                <h3 class="heading-tertiary">live a healthier life</h3>
+                <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
+              </div>
+        </div>   
       </div>
     </section>
   </main>
