--- a/public/index.html
+++ b/public/index.html
@@ -65,30 +65,38 @@
           <div class="feature-box">
             <i class="icon-basic-world feature-box__icon"></i>
             <h3 class="heading-tertiary">Explore the world</h3>
-            <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae.
+              Laudantium.
+            </p>
           </div>
         </div>
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <i class="icon-basic-compass feature-box__icon"></i>
-                <h3 class="heading-tertiary">Meet nature</h3>
-                <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
-              </div>
+          <div class="feature-box">
+            <i class="icon-basic-compass feature-box__icon"></i>
+            <h3 class="heading-tertiary">Meet nature</h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae.
+              Laudantium.
+            </p>
+          </div>
         </div>
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <i class="icon-basic-map feature-box__icon"></i>
-                <h3 class="heading-tertiary">Find your way</h3>
-                <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
-              </div>
+          <div class="feature-box">
+            <i class="icon-basic-map feature-box__icon"></i>
+            <h3 class="heading-tertiary">Find your way</h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae.
+              Laudantium.
+            </p>
+          </div>
         </div>
         <div class="col-1-of-4">
-            <div class="feature-box">
-                <i class="icon-basic-heart feature-box__icon"></i>
-                <h3 class="heading-tertiary">live a healthier life</h3>
-                <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae. Laudantium.</p>
-              </div>
-        </div>   
+          <div class="feature-box">
+            <i class="icon-basic-heart feature-box__icon"></i>
+            <h3 class="heading-tertiary">live a healthier life</h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione velit aliquam necessitatibus vitae.
+              Laudantium.
+            </p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -98,20 +106,137 @@
           Most popular tours
         </h2>
       </div>
+
       <div class="row">
+
+        <!-- card 1 -->
         <div class="col-1-of-3">
           <div class="card">
             <div class="card__side card__side--front">
-              TEXT
+              <div class="card__picture card__picture--1">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-wrapper--1">
+                  The Sea Explorer
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>3 day tours</li>
+                  <li>Up to 30 people</li>
+                  <li>2 tour guids</li>
+                  <li>Sleep in cozy hotels</li>
+                  <li>Difficulty: easy</li>
+                </ul>
+              </div>
             </div>
             <div class="card__side card__side--back card__side--back-1">
-                TEXT
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">only</p>
+                  <p class="card__price-value">290 €</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now</a>
               </div>
+            </div>
           </div>
         </div>
-        <div class="col-1-of-3">Col 1 of 3</div>
-        <div class="col-1-of-3">Col 1 of 3</div>
+        <!-- card 2 -->
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--2">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-wrapper card__heading-wrapper--2">
+                  The Forest Hiker
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>7 day tour</li>
+                  <li>Up to 40 people</li>
+                  <li>6 tour guids</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: medium</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-2">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">only</p>
+                  <p class="card__price-value">290 €</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- card 3 -->
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              <div class="card__picture card__picture--3">
+                &nbsp;
+              </div>
+              <h4 class="card__heading">
+                <span class="card__heading-wrapper card__heading-wrapper--3">
+                  The Snow adventurer
+                </span>
+              </h4>
+              <div class="card__details">
+                <ul>
+                  <li>5 day tours</li>
+                  <li>Up to 15 people</li>
+                  <li>3 tour guids</li>
+                  <li>Sleep in provided tents</li>
+                  <li>Difficulty: hard</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card__side card__side--back card__side--back-3">
+              <div class="card__cta">
+                <div class="card__price-box">
+                  <p class="card__price-only">only</p>
+                  <p class="card__price-value">290 €</p>
+                </div>
+                <a href="#" class="btn btn--white">Book now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
+
+      <div class="u-center-text u-margin-top-big">
+        <a href="#" class="btn btn--green">Discover all tours</a>
+      </div>
+    </section>
+
+    <section class="section-stories">
+      <!-- heading -->
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          We make people genuinely happy
+        </h2>
+      </div>
+      <!-- content -->
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+          </figure>
+          <div class="story__text">
+            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae earum inventore cupiditate laborum et perspiciatis?</p>
+          </div>
+        </div>
+      </div>
+
     </section>
 
   </main>
