--- a/public/index.html
+++ b/public/index.html
@@ -218,6 +218,13 @@
     </section>
 
     <section class="section-stories">
+      <!-- background video -->
+      <div class="bg-video">
+        <video class="bg-video__content" autoplay muted loop>
+          <source src="img/video.mp4" type="video/mp4">
+          <source src="img/video.webm" type="video/webm"> Your browser is not supported!
+        </video>
+      </div>
       <!-- heading -->
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
@@ -229,6 +236,9 @@
         <div class="story">
           <figure class="story__shape">
             <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+            <figcaption class="story__caption">
+              Jan Doe
+            </figcaption>
           </figure>
           <div class="story__text">
             <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
@@ -237,6 +247,24 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="story">
+          <figure class="story__shape">
+            <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
+            <figcaption class="story__caption">
+              Jon Doe
+            </figcaption>
+          </figure>
+          <div class="story__text">
+            <h3 class="heading-tertiary u-margin-bottom-small">WOW! my life is completly different</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae earum inventore cupiditate laborum et perspiciatis?</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="u-center-text u-margin-top-big">
+        <a href="#" class="btn-text">Read all stories &rarr;</a>
+      </div>
     </section>
 
   </main>
